# notepad-plus-plus

./: .gitignore  CONTRIBUTING.md  README.md  macOS_convert_tasks_done.md  macOS_convert_todo.md
.github/ISSUE_TEMPLATE/: config.yml  macos-bug-report.yml  macos-feature-request.yml
.github/workflows/: CI_build.yml  macos-port-ci.yml
PowerEditor/Test/FunctionList/cpp/: unitTest
PowerEditor/macos/: CMakeLists.txt  Info.plist.in  main.mm
PowerEditor/src/: CMakeLists.txt  Notepad_plus.cpp  Notepad_plus.h  Notepad_plus_Window.cpp  NppBigSwitch.cpp  NppCommands.cpp  NppDarkMode.cpp  NppIO.cpp  Parameters.cpp  Parameters.h  winmain.cpp
PowerEditor/src/Core/: DocumentEnvironment.h  TextFileAnalyzer.cpp  TextFileAnalyzer.h
PowerEditor/src/MISC/Common/: Common.cpp  Common.h
PowerEditor/src/Platform/: ApplicationLauncher.cpp  ApplicationLauncher.h  DocumentOpenQueue.cpp  DocumentOpenQueue.h  FileChangePoller.cpp  FileChangePoller.h  FileSystem.cpp  FileSystem.h  PathProvider.cpp  PathProvider.h  PreferencesMigrator.cpp  PreferencesMigrator.h  PreferencesSync.cpp  PreferencesSync.h  SettingsLocator.cpp  SettingsLocator.h  SharingCommandQueue.cpp  SharingCommandQueue.h  SystemAppearance.cpp  SystemAppearance.h  SystemInfo.cpp  SystemInfo.h  SystemServices.cpp  SystemServices.h  SystemServices_Windows.cpp
PowerEditor/src/ScintillaComponent/: Buffer.cpp  Buffer.h
PowerEditor/src/UI/: Application.h  Command.h  Docking.h  DockingLayout.cpp  DockingLayout.h  Factory.cpp  Factory.h  Menu.h  QtBackend.cpp  QtBackend.h  ScintillaTheme.cpp  ScintillaTheme.h  Shortcut.h  ShortcutNormalization.cpp  ShortcutNormalization.h  Tabs.h  Theme.h  Types.h  UI.h  Window.h
PowerEditor/src/WinControls/AboutDlg/: AboutDlg.cpp
PowerEditor/src/WinControls/PluginsAdmin/: pluginsAdmin.cpp
PowerEditor/visual.net/: notepadPlus.vcxproj
design/tokens/: liquid_glass.json
docs/macos/: architecture_assessment.md  build_system_plan.md  communication_plan.md  developer_environment.md  docking_strategy.md  launchservices_registration.md  liquid_glass_tokens.md  macos_ui_mockups.md  npp_ui_module_spec.md  nsdocumentcontroller_tests.md  plugin_api_compatibility.md  plugin_distribution_strategy.md  plugin_porting_assessment.md  plugin_sdk_guide.md  port_roadmap.md  preferences_plugin_api.md  qt_main_window_prototype.md  registry_migration_plan.md  scintilla_cocoa_integration.md  shortcut_strategy_mac.md  system_services_matrix.md  tab_manager_strategy.md  ui_strategy.md  update_strategy.md
lexilla/src/: Lexilla.cxx
resources/ui/: liquid_glass.qss
scintilla/qt/ScintillaEditBase/: PlatQt.h
tests/unit/: CMakeLists.txt
tests/unit/core/: test_text_file_analyzer.cpp
tests/unit/platform/: test_document_open_queue.cpp  test_file_change_poller.cpp  test_file_system.cpp  test_path_provider.cpp  test_preferences_migrator.cpp  test_preferences_store.cpp  test_preferences_sync.cpp  test_settings_locator.cpp  test_sharing_command_queue.cpp  test_system_appearance.cpp  test_system_info.cpp  test_system_services.cpp  test_system_services_override.cpp
tests/unit/ui/: test_docking_layout.cpp  test_scintilla_theme.cpp  test_shortcut_normalization.cpp  test_ui_factory.cpp  test_ui_qt_backend.cpp
tools/: generate_liquid_glass_qss.py  validate_plugin_manifest.py
tools/macos_plugin_sdk/: CMakeLists.txt  CMakePresets.json  README.md
tools/macos_plugin_sdk/include/npp/: NotepadPlusMsgs.h  PluginAPI.h
tools/macos_plugin_sdk/src/: HelloPlugin.cpp
